tests/expectations/compiler/array/array_variable_access_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ELUN0379001]: The array index must be constant.
    --> compiler-test:5:16
     |
   5 |         return a[index];
     |                ^^^^^^^^
"""]
